# HDembinski.github.io

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CRDB REST query tutorial.ipynb  Correlation.ipynb  Fit weighted histograms with SPD method.ipynb  LICENSE  Leave-one-out cross-validation.ipynb  MCMC.ipynb  MachineLearning.ipynb  New iminuit displays.ipynb  Numerical Jacobian.ipynb  Numerically stable calculation of invariant mass.ipynb  PDG Rounding of Quantities.ipynb  README.md  RooFit.ipynb  RooFit2.ipynb  SPD with negative weights.ipynb  UnbiasedEML.ipynb  UncertaintiesLecture.ipynb  Uncertainty of efficiency computed from fitted yields.ipynb  Wilson Score Interval with Weighted Histograms.ipynb  _quarto.yml  about.qmd  add_tags.py  art.qmd  auto_add_date.py  barlow_beeston.ipynb  benchmark of building an array with numba.ipynb  chance_of_deviations_in_random_splits.ipynb  comparison_chisquare_test_statistics.ipynb  discrete profiling.ipynb  duffing.ipynb  error_propagation_ratio.ipynb  error_propagation_with_sympy.ipynb  exceptions.md  fast_deep_set.ipynb  gallery.ejs  generate_metadata.py  (+26 more)
2024_DOEPy_iminuit/: talk.ipynb
2024_LHCb_Starterkit/: example.root  lecture_1.ipynb  lecture_2.ipynb  lecture_2_full.ipynb
_posts/: Correlation.ipynb  Fit weighted histograms with SPD method.ipynb  Interactive plotting in Jupyter with matplotlib.ipynb  Leave-one-out cross-validation.ipynb  Numerically stable calculation of invariant mass.ipynb  SPD with negative weights.ipynb  Simple parallelization in Jupyter Notebooks.ipynb  UnbiasedEML.ipynb  Wilson Score Interval with Weighted Histograms.ipynb  _metadata.yml  asymmetric errors.ipynb  benchmark of building an array with numba.ipynb  chance_of_deviations_in_random_splits.ipynb  comparison_chisquare_test_statistics.ipynb  cows.ipynb  cross_section_extrapolation_error.ipynb  cross_section_pip_vs_pp.ipynb  duffing.ipynb  error_propagation_ratio.ipynb  error_propagation_with_sympy.ipynb  exceptions.md  factorization_test.ipynb  fast_deep_set.ipynb  hyperon_feed_down.ipynb  iminuit_update.ipynb  llama_index_rag.ipynb  llm_tag_posts.ipynb  logaddexp.ipynb  look_elsewhere_effect.ipynb  naive_calibration_bias.ipynb  parse_latex.ipynb  parsing_webpages_with_llm.ipynb  parsing_webpages_with_llm_revisited.ipynb  plots_with_hyperlinks.ipynb  regression.ipynb  render_latex_to_svg.ipynb  resample and numba.ipynb  tracking_efficiency.ipynb  visual_cross_section.ipynb
lectures/: MachineLearning.ipynb  UncertaintiesLecture.ipynb
numpy_rng_fortran/: main.f90  meson.build  rangen.cpp  rangen.fpp  src.c
optuna/: fit.py
posts/: Cross-section.ipynb  Energy conversion.ipynb  From fixed target to sqrt_s_nn and back.ipynb  HESSE_vs_MINOS_TwoGauss.ipynb  Interactive plotting in Jupyter with matplotlib.ipynb  Leave-one-out cross-validation.ipynb  MCMC.ipynb  RooFit.ipynb  Sleep mode power consumption.ipynb  UncertaintiesLecture.ipynb  Uncertainty of efficiency computed from fitted yields.ipynb  Wilson Score Interval with Weighted Histograms.ipynb  _metadata.yml  all_KK_decays.ipynb  asymmetric errors.ipynb  comparison_chisquare_test_statistics.ipynb  cows.ipynb  cross_section_extrapolation_error.ipynb  duffing.ipynb  exceptions.md  finance.ipynb  gof_test_statistic.ipynb  invariant mass combinatorial background.ipynb  llama_index_rag.ipynb  logaddexp.ipynb  parse_latex.ipynb  (+10 more)
(+10 files in other folders)
