[project]
name = "blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "flax>=0.12.0",
    "ipykernel>=7.0.1",
    "ipython>=9.6.0",
    "jaxlib>=0.8.0",
    "markdownify>=1.2.0",
    "matplotlib>=3.10.7",
    "mistune>=3.1.4",
    "optax>=0.2.6",
    "playwright>=1.55.0",
    "polars>=1.34.0",
    "scipy>=1.16.2",
    "treescope>=0.1.10",
    "wikipedia>=1.4.0",
]
